tests/snapshots/cli__accept.snap
---
source: tests/cli.rs
expression: help
---
Accept an incoming request after authoritative validation and confirmation

Usage: accept [OPTIONS] <REQUEST_ID>

Arguments:
  <REQUEST_ID>
          Canonical incoming request ID

Options:
      --yes
          Skip only the final default-No confirmation

  -h, --help
          Print help (see a summary with '-h')

Accepting sends the exact requested amount to the requester and requires an available Venmo balance snapshot covering it. The approval submits no external funding-method identifier, but neither the snapshot nor the response proves the final funding source or fee. Confirmation defaults to No. Financial exit code 3 means the acceptance outcome must be verified independently. Do not retry; check `activity list`, `requests list`, and the official Venmo app.
