tests/snapshots/cli__activity.snap
---
source: tests/cli.rs
expression: help
---
Inspect account activity

Usage: activity <COMMAND>

Commands:
  list       List recent activity
  info       Show information about one activity record
  comments   List, add, or remove activity comments
  reactions  List, add, or remove activity reactions
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
