tests/snapshots/cli__activity_comments.snap
---
source: tests/cli.rs
expression: help
---
List, add, or remove activity comments

Usage: comments <COMMAND>

Commands:
  list    List activity comments
  add     Add a comment to one activity record
  remove  Remove one comment by its canonical comment ID
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
