tests/snapshots/cli__activity_comments_add.snap
---
source: tests/cli.rs
expression: help
---
Add a comment to one activity record

Usage: add [OPTIONS] <ACTIVITY_ID> <MESSAGE>

Arguments:
  <ACTIVITY_ID>
          Canonical activity ID

  <MESSAGE>
          Comment text

Options:
      --yes
          Skip only the final default-No confirmation

      --dry-run
          Complete preflight and show details without adding the comment

  -h, --help
          Print help (see a summary with '-h')

Comments must contain non-whitespace text and cannot exceed 2000 characters. The command performs an authoritative activity preflight and never retries automatically. Exit code 3 means the comment outcome must be verified independently.
