tests/snapshots/cli__activity_info.snap
---
source: tests/cli.rs
expression: help
---
Show information about one activity record

Usage: info <ACTIVITY_ID>

Arguments:
  <ACTIVITY_ID>
          Canonical activity ID

Options:
  -h, --help
          Print help
