tests/snapshots/cli__activity_reactions_list.snap
---
source: tests/cli.rs
expression: help
---
List aggregate reactions and the authenticated account's reaction state

Usage: list <ACTIVITY_ID>

Arguments:
  <ACTIVITY_ID>
          Canonical activity ID

Options:
  -h, --help
          Print help
